# immoscout-helper

./: .gitignore  .mcp.json  CLAUDE.md  PRIVACY.md  README.md  background.js  biome.json  content.js  manifest.json  package-lock.json  package.json  popup.html  popup.js
.github/workflows/: release.yml  test.yml
apps/documents/: README.md  package.json
apps/extension/: package.json  print.html  viewer.html
apps/extension-is24/: components.json  package.json  popup.html  tsconfig.json
apps/extension-is24/scripts/: check-no-literal-colors.sh
apps/extension/scripts/: check-no-literal-colors.sh
apps/extension/static/: manifest.json
apps/server/: .env.example  .gitignore  package.json  tsconfig.json
apps/server/data/: examples.json  profile.json
apps/server/src/: index.ts  types.ts
docs/: ui-audit-2026-05.md
docs/superpowers/plans/: 2026-07-07-ts-document-generation.md
docs/superpowers/specs/: 2026-07-07-ts-document-generation-design.md
documents/: README.md  fill_selbstauskunft.py  pyproject.toml
extension/: background.js  content.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  shared.js  tsconfig.json  vite.config.ts
extension/scripts/: check-no-literal-colors.sh
extension/src/: background.ts  content.ts
extension/src/background/: activity.ts  ai.ts  conversations.ts  exporter.ts  helpers.ts  index.ts  indexeddb.ts  listings.ts  message-handler.ts  messaging.ts  monitoring.ts  notifications.ts  (+10 more)
extension/static/: manifest.json
server/: package-lock.json  package.json
server/src/: index.ts  prompts.ts  types.ts
(+218 files in other folders)
